// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBusinessHourV2Drafts Return a empty array if the businessHour has no drafts 1`] = `undefined`;

exports[`getBusinessHourV2Drafts Return a empty array if the drafts attribute on the businessHours it's not a list 1`] = `undefined`;

exports[`getBusinessHourV2Drafts Return drafts array if the businessHour has a draft attribute and it's a list 1`] = `undefined`;

exports[`selectBusinessHoursEntityVersions Return a empty array if the businessHour has no versions 1`] = `Array []`;

exports[`selectBusinessHoursEntityVersions Return an array if the businessHour has versions 1`] = `Array []`;

exports[`selectBusinessHoursRules Return a empty array if the version has no rules 1`] = `Array []`;

exports[`selectBusinessHoursRules Return an array if the version has rules 1`] = `Array []`;

exports[`selectBusinessHoursV2FormInitialValues Return initial form values when creating a new entity 1`] = `
Immutable.Map {
  "active": true,
  "shared": false,
}
`;

exports[`selectBusinessHoursV2FormInitialValues Return initial form values when updating an entity 1`] = `
Immutable.Map {
  "id": "mockId",
  "shared": false,
  "active": true,
  "versions": Immutable.List [],
}
`;
